manifest/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metapod
  labels:
    app: metapod
    service: metapod
  annotations:
    service.cilium.io/global: "true"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: metapod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metapod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metapod
      version: v1
  template:
    metadata:
      labels:
        app: metapod
        version: v1
    spec:
      containers:
      - image: registry.quynhlab.com/multicluster/metapod:v2
        imagePullPolicy: IfNotPresent
        name: metapod
        ports:
        - containerPort: 8080
